# amoebax-sdl2

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.GP2X  README.md  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac
.github/workflows/: ci.yml
autopackage/: Makefile.am  Makefile.in  default.apspec.in
data/: Amoebax.url  CMakeLists.txt  Info.plist  License.rtf  Makefile.am  Makefile.in  amoebax.desktop  amoebax.wxs  win32res.rc
data/dlls/: Makefile.am  Makefile.in
data/graphics/: Makefile.am
doc/: CMakeLists.txt  Doxyfile.in  Makefile.am  Makefile.in  manual.sla
m4/: Makefile.am  Makefile.in  objc.m4  sdl.m4
src/: AIPlayer.cxx  AIPlayer.h  AIPlayerFactory.cxx  AIPlayerFactory.h  AdvancedAIPlayer.cxx  AdvancedAIPlayer.h  Amoeba.cxx  Amoeba.h  AmoebaxMain.h  AmoebaxMain.m  AnticipatoryAIPlayer.cxx  AnticipatoryAIPlayer.h  CMakeLists.txt  ChainLabel.cxx  ChainLabel.h  CongratulationsState.cxx  CongratulationsState.h  ControlSetupState.cxx  ControlSetupState.h  CreditsState.cxx  CreditsState.h  DemoState.cxx  DemoState.h  DrawAmoeba.h  DrawChainLabel.h  DumbAIPlayer.cxx  DumbAIPlayer.h  FadeInState.cxx  FadeInState.h  FadeOutState.cxx  FadeOutState.h  File.cxx  File.h  Font.cxx  Font.h  FrameManager.cxx  FrameManager.h  Grid.cxx  Grid.h  GridStatus.cxx  (+66 more)
src/ext/: CMakeLists.txt  cute_png.cpp
src/macos/: CMakeLists.txt  OSXOptions.cxx  OSXOptions.h  macos.cmake
src/unix/: CMakeLists.txt  UnixOptions.cxx  UnixOptions.h  unix.cmake
src/win32/: CMakeLists.txt  Win32Options.h  win32.cmake
